k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: space-comms-twin
  labels:
    app: space-comms-twin
spec:
  type: ClusterIP
  selector:
    app: space-comms-twin
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
    name: http
